--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,9 +1,14 @@
-body{
-    height: 200vh;
+html,
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
 
 .banner{
-    background-image: url('../images/mainpic.jpg');
+    background-image: url(../images/mainpic.jpg);
     background-size: cover;
     height: 80vh;
     box-shadow: 100px 100px 1000px 1000px inset rgba(0, 0, 0, 0.39);
